yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickmorty-service
  labels:
    app: rickmorty-service
spec:
  type: ClusterIP
  selector:
    app: rickmorty-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
