yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rickmorty-service
  labels:
    app: rickmorty-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rickmorty.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rickmorty-service
                port:
                  number: 80
